project(station)
cmake_minimum_required(VERSION 3.9.3)
add_definitions(-std=c++11)
include_directories(${PROJECT_SOURCE_DIR})
include_directories(/home/chmwang/YeeZ-Privacy-Computing)
include_directories(/home/chmwang/YeeZ-Privacy-Computing/include)
include_directories(/home/chmwang/YeeZ-Privacy-Computing/vendor/fflib/include)
link_directories(/home/chmwang/YeeZ-Privacy-Computing/vendor/fflib/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/output/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/output/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/output/)
add_subdirectory(reader)
